--- a/blocks/opco-grid/opco-grid.css
+++ b/blocks/opco-grid/opco-grid.css
@@ -32,6 +32,12 @@
   }
 }
 
+.dhls-container {
+  max-width: 1238px;
+  margin: 0 auto;
+  margin-top: 48px
+}
+
 .opco-grid-wrapper :is(.relative) {
   position: relative
 }
